<resources>
    <string name="app_name">Plurals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Plurals</string>
    <string name="nav_header_subtitle">anand@plurals.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="volunteer">Party Ambassador</string>
    <string name="career">Party Membership</string>
    <string name="logout">Logout</string>
    <string name="register">Register to Become A Plural</string>
    <string name="join">Join the Most Progressive Movement in Bihar</string>
    <string name="contact_details">Contact Details</string>
    <string name="address_line_1">Address </string>
    <string name="address_line_2">Address line 2 (Optional)</string>

    <string name="facebook_app_id">139060064069322</string>
    <string name="fb_login_protocol_scheme">fb139060064069322</string>
    <string name="purpose">(Please write in max. 100 words that what is your motivation for joining)</string>
    <string name="pc_ac_details"><![CDATA[Parliament & Assembly Details]]></string>
    <string name="upload">(Please upload image/pdf/docx that what is your motivation for joining)</string>

</resources>
