<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fb"
            android:icon="@drawable/ic_facebook_black"
            android:title="@string/facebook" />
        <item
            android:id="@+id/nav_tw"
            android:icon="@drawable/ic_twitter_black"
            android:title="@string/twitter" />
        <item
            android:id="@+id/nav_utube"
            android:icon="@drawable/ic_youtube_black"
            android:title="@string/youtube" />
        <item
            android:id="@+id/nav_volunteer"
            android:icon="@drawable/ic_volunteer"
            android:title="@string/volunteer" />
        <item
            android:id="@+id/nav_career"
            android:icon="@drawable/ic_career"
            android:title="@string/career" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>



</menu>
