<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.plurals.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fb"
        android:name="com.plurals.android.ui.gallery.GalleryFragment"
        android:label="@string/facebook"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tw"
        android:name="com.plurals.android.ui.slideshow.SlideshowFragment"
        android:label="@string/twitter"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_utube"
        android:name="com.plurals.android.ui.tools.ToolsFragment"
        android:label="@string/youtube"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_volunteer"
        android:name="com.plurals.android.ui.share.ShareFragment"
        android:label="@string/volunteer"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_career"
        android:name="com.plurals.android.ui.send.SendFragment"
        android:label="@string/career"
        tools:layout="@layout/fragment_send" />
</navigation>